[package]
name = "pwgraster"
version = "0.1.0"
authors = ["Tyler Hall <tylerwhall@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/tylerwhall/pwgraster"
homepage = "https://github.com/tylerwhall/pwgraster"
description = "Decoding of PWG (Printer Working Group) raster images."

[dependencies]
byteorder = "1.0.0"
enum_primitive = "0.1.1"
memchr = "1.0.1"
png = { version = "0.7.0", optional = true }

[features]
default = []

[[bin]]
name = "pwg2png"
path = "src/bin/pwg2png.rs"
required-features = ["png"]
